# picoTracker-playground

./: README.md
pT_dx7/: .gitignore  AGENTS.md  CMakeLists.txt  Readme.md  algo-plan2.md  implementation_plan.md  syx_to_header.py
pT_dx7/audio/: CMakeLists.txt  audio_i2s_pcm5102.pio  audio_output.c  audio_output.h  audio_render_core.c  audio_render_core.h  dsp.h  fm_synth.c  fm_synth.h  fx_engine.h  i2c_reg_io.c  i2c_reg_io.h  mclk.pio  resources.h  reverb.c  reverb.h  sine_wave_table.c  sine_wave_table.h  stmlib.h
pT_dx7/display/: CMakeLists.txt  algo_gfx.c  algo_gfx.h  chargfx.c  chargfx.h  display_startup.c  display_startup.h  font.h  ili9341.c  ui_widgets.c  ui_widgets.h
pT_dx7/platform/: CMakeLists.txt  pico_gpio.h  platform_clocks.c  platform_clocks.h  platform_input.c  platform_input.h  sdcard_fs.cpp  sdcard_fs.h
pT_dx7/platform/sdcard/: CMakeLists.txt  sd_card_sdio.cpp  sdcard_log.h  sdio.cpp  sdio.h
pT_dx7/src/: CMakeLists.txt  dx7_patches.h  dx7_rom_bank.c  dx7_rom_bank.h  main.c  midi.c  midi.h  tusb_config.h  usb_descriptors.c
rp2040-doom/: CMakeLists.txt  README.md
rp2040-doom/src/: CMakeLists.txt  doomtype.h  i_main.c  pd_render.cpp  w_file_memory.c  z_zone.c
rp2040-doom/src/doom/: d_main.c  m_menu.c
rp2040-doom/src/pico/: CMakeLists.txt  i_input.c  i_picosound.c  i_picosound.h  i_system.c  i_video.c  picoflash.c  piconet.c  stubs.c
rp2040-doom/src/whd_gen/: compress_mus.h  lodepng.cpp  wad.h
